# astrolabe-core

./: .gitignore  AGENTS.md  CLAUDE.md  PROMPT.md  PROMPT_M1.md  PROMPT_M2.md  PROMPT_M3_1.md  PROMPT_M3_2.md  PROMPT_M3_3.md  PROMPT_M3_5.md  PROMPT_M4_1.md  pyproject.toml  vercel.json
api/: __init__.py  index.py
docs/: backlog.md  deployment.md  design.md  dev-ledger.md  morning.workflow.yml  ui-research.md  vercel-preflight.md  weekly-review.workflow.yml
fixtures/: arxiv_sample.xml  discord_report.json  llm_synthesis.json  llm_triage.json  llm_weekly_review.json  llm_weekly_review_leak.json  rss_sample.xml
src/astrolabe/: __init__.py  anon_guard.py  cli.py  config.py  exporter.py  github_feedback.py  layout.py  notify_discord.py  publishing.py  render.py  render_html.py  weekly_review.py
src/astrolabe/collect/: arxiv.py  (+3 more)
supabase/migrations/: 202607190001_m3_ledger.sql  202607190002_fix_derived_replace.sql  202607190003_m3_tutor_tasks.sql  (+1 more)
tests/: conftest.py  test_anon_guard.py  test_arxiv.py  test_backend.py  test_cli.py  test_config.py  test_dedupe.py  test_derive.py  test_exporter.py  test_github_feedback.py  test_layout.py  test_llm.py  test_migration.py  test_notify_discord.py  test_personalization.py  test_pipeline.py  test_public_api.py  test_public_auth.py  test_publishing.py  test_render_html.py  test_review_schedule.py  test_rss.py  test_snapshot.py  test_supabase_backend.py  test_supabase_migration_sql.py  test_tutor_engine.py  test_tutor_server.py  test_tutor_tools.py  test_vercel_public_config.py  test_weekly_review.py  test_workflow_reference.py
(+29 files in other folders)
