[project]
name = "astrolabe"
version = "0.1.0"
description = "LLM/AI学習観測エージェント(M3: 常駐チューター基盤)"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "openai>=1.66",
    "httpx>=0.27",
    "feedparser>=6.0.11",
]

[project.scripts]
astrolabe = "astrolabe.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astrolabe"]

[tool.vercel]
entrypoint = "api.index:handler"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
